Fixed overflow along x-axis in dropdown section

--- a/src/app/dropdown/dropdown.component.css
+++ b/src/app/dropdown/dropdown.component.css
@@ -90,6 +90,10 @@ li.dropdown-menu-box {
   content: '';
 }
 
+.dropdown-menu-inner {
+	overflow-x: hidden;
+}
+
 div.block:hover {
     border: 1px solid rgba(150,150,150,0.3);
 }
